[gd_scene load_steps=19 format=3 uid="uid://0lx4u2cbsbx5"]

[ext_resource type="Script" uid="uid://d1k1dbpexnxn6" path="res://slay_the_wc/Scenes/Battle/Battle.gd" id="1_m54iq"]
[ext_resource type="Script" uid="uid://51ls0ltds4a4" path="res://slay_the_wc/Cards/Scenes/Scripts/CardManager.gd" id="1_skn0e"]
[ext_resource type="Script" uid="uid://csiakp18y6451" path="res://slay_the_wc/Scenes/Battle/PlayerHand.gd" id="3_63f3c"]
[ext_resource type="PackedScene" uid="uid://c0232xdiagpb0" path="res://slay_the_wc/Cards/Scenes/CardSlot.tscn" id="3_uxmdl"]
[ext_resource type="PackedScene" uid="uid://c5tv2mkvw873b" path="res://slay_the_wc/Cards/Scenes/Bin.tscn" id="4_m54iq"]
[ext_resource type="PackedScene" uid="uid://bchpkogownigj" path="res://slay_the_wc/Cards/Scenes/Deck.tscn" id="4_n0u8k"]
[ext_resource type="Script" uid="uid://ceyqelgn0rsu6" path="res://slay_the_wc/Scenes/Battle/InputManager.gd" id="6_8ajvn"]
[ext_resource type="PackedScene" uid="uid://1k2k2fb7j37s" path="res://slay_the_wc/Cards/Scenes/CardZoom.tscn" id="7_n0u8k"]
[ext_resource type="Script" uid="uid://dv0liaebeo6ga" path="res://slay_the_wc/Cards/Scenes/CardZoom.gd" id="8_m54iq"]
[ext_resource type="Texture2D" uid="uid://cpn25w2rccuim" path="res://slay_the_wc/Assets/Art/Telo.png" id="10_g1550"]
[ext_resource type="Texture2D" uid="uid://d28urwm7s16i1" path="res://slay_the_wc/Assets/Art/shield_icon.png" id="10_qfjho"]
[ext_resource type="Texture2D" uid="uid://cs1qe6awkyhlw" path="res://slay_the_wc/Assets/Art/patate_ennemie.png" id="11_4wtip"]
[ext_resource type="Texture2D" uid="uid://bghcekvflyd27" path="res://slay_the_wc/Assets/Art/background_1.png" id="12_1usg4"]
[ext_resource type="VideoStream" uid="uid://b4arpe4l2rkr3" path="res://slay_the_wc/Assets/Art/background_forest_final.ogv" id="13_37y5e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_37y5e"]
bg_color = Color(0.87058824, 0, 0.18039216, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qfjho"]
bg_color = Color(0.6784314, 0.9882353, 0.5058824, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aqkqu"]
bg_color = Color(0.87058824, 0, 0.18039216, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j145f"]
bg_color = Color(0.6784314, 0.9882353, 0.5058824, 1)

[node name="Battle" type="Node2D"]
script = ExtResource("1_m54iq")

[node name="CardManager" type="Node2D" parent="."]
script = ExtResource("1_skn0e")

[node name="PlayerHand" type="Node2D" parent="."]
script = ExtResource("3_63f3c")

[node name="Bin" parent="." instance=ExtResource("4_m54iq")]
light_mask = 16
visibility_layer = 16
position = Vector2(1323, 715)

[node name="Deck" parent="." instance=ExtResource("4_n0u8k")]
light_mask = 16
visibility_layer = 16
position = Vector2(67, 715)

[node name="InputManager" type="Node2D" parent="."]
script = ExtResource("6_8ajvn")

[node name="CardZoom" parent="." instance=ExtResource("7_n0u8k")]
script = ExtResource("8_m54iq")

[node name="BattleField" type="Node" parent="."]

[node name="Characters" type="Node2D" parent="BattleField"]

[node name="Player" type="Node2D" parent="BattleField/Characters"]

[node name="PlayerImage" type="Sprite2D" parent="BattleField/Characters/Player"]
position = Vector2(291, 476.00003)
scale = Vector2(0.2, 0.2)
texture = ExtResource("10_g1550")

[node name="HealthBarPlayer" type="ProgressBar" parent="BattleField/Characters/Player"]
top_level = true
z_index = 20
offset_left = 170.0
offset_top = 322.0
offset_right = 407.0
offset_bottom = 349.0
mouse_filter = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/background = SubResource("StyleBoxFlat_37y5e")
theme_override_styles/fill = SubResource("StyleBoxFlat_qfjho")
value = 100.0
show_percentage = false

[node name="EnergyPlayer" type="RichTextLabel" parent="BattleField/Characters/Player"]
offset_left = 243.0
offset_top = 283.0
offset_right = 337.0
offset_bottom = 312.0

[node name="DefensePlayer" type="RichTextLabel" parent="BattleField/Characters/Player"]
z_index = 31
offset_left = 418.0
offset_top = 323.0
offset_right = 448.0
offset_bottom = 347.0

[node name="HealthPlayer" type="RichTextLabel" parent="BattleField/Characters/Player"]
z_index = 30
offset_left = 260.0
offset_top = 324.0
offset_right = 337.0
offset_bottom = 347.0
theme_override_colors/default_color = Color(0, 0, 0, 1)

[node name="NamePlayer" type="RichTextLabel" parent="BattleField/Characters/Player"]
offset_left = 227.0
offset_top = 213.0
offset_right = 506.0
offset_bottom = 253.0
theme_override_font_sizes/normal_font_size = 30
scroll_active = false

[node name="DefenseIcon" type="Sprite2D" parent="BattleField/Characters/Player"]
z_index = 30
position = Vector2(428, 338)
scale = Vector2(0.6, 0.6)
texture = ExtResource("10_qfjho")

[node name="Ennemie1" type="Node2D" parent="BattleField/Characters"]

[node name="EnnemieImage" type="Sprite2D" parent="BattleField/Characters/Ennemie1"]
position = Vector2(1139.0001, 489.00003)
scale = Vector2(0.4, 0.4)
texture = ExtResource("11_4wtip")

[node name="DefenseEnnemy" type="RichTextLabel" parent="BattleField/Characters/Ennemie1"]
z_index = 31
offset_left = 982.0
offset_top = 322.0
offset_right = 1007.0
offset_bottom = 346.0

[node name="NameEnnemy" type="RichTextLabel" parent="BattleField/Characters/Ennemie1"]
offset_left = 1048.0
offset_top = 213.0
offset_right = 1326.0
offset_bottom = 253.0
theme_override_font_sizes/normal_font_size = 30
scroll_active = false

[node name="HealthEnnemy" type="RichTextLabel" parent="BattleField/Characters/Ennemie1"]
z_index = 31
offset_left = 1092.0
offset_top = 322.0
offset_right = 1195.0
offset_bottom = 351.0
theme_override_colors/default_color = Color(0, 0, 0, 1)

[node name="IntentionEnnemie" type="Sprite2D" parent="BattleField/Characters/Ennemie1"]
z_index = 9
position = Vector2(1126, 282)
scale = Vector2(0.9, 0.981)

[node name="HealthBarEnnemie" type="ProgressBar" parent="BattleField/Characters/Ennemie1"]
z_index = 20
offset_left = 1010.0
offset_top = 322.0
offset_right = 1247.0
offset_bottom = 349.0
theme_override_styles/background = SubResource("StyleBoxFlat_aqkqu")
theme_override_styles/fill = SubResource("StyleBoxFlat_j145f")
value = 100.0
fill_mode = 1
show_percentage = false

[node name="DefenseIcon" type="Sprite2D" parent="BattleField/Characters/Ennemie1"]
z_index = 30
position = Vector2(990, 338)
scale = Vector2(0.6, 0.6)
texture = ExtResource("10_qfjho")

[node name="CardSlot" parent="BattleField" instance=ExtResource("3_uxmdl")]
position = Vector2(701, 327)

[node name="Button" type="Button" parent="."]
z_index = 10
offset_left = 655.0
offset_top = 486.0
offset_right = 748.0
offset_bottom = 517.0
text = "Fin du tour"

[node name="ResultBattle" type="RichTextLabel" parent="."]
offset_left = 454.0
offset_top = 21.0
offset_right = 1063.0
offset_bottom = 200.0
theme_override_font_sizes/normal_font_size = 40

[node name="EndBattle" type="Button" parent="."]
visible = false
z_index = 10
offset_left = 608.0
offset_top = 160.0
offset_right = 810.0
offset_bottom = 191.0
text = "Retour Ã  l'ecran principal"

[node name="BackGround" type="Sprite2D" parent="."]
visible = false
z_index = -7
position = Vector2(699, 424.00003)
scale = Vector2(1.1986301, 1.0714287)
texture = ExtResource("12_1usg4")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
z_index = -12
offset_right = 1408.0
offset_bottom = 841.0
scale = Vector2(2.1, 1.85)
mouse_filter = 2
stream = ExtResource("13_37y5e")
volume_db = -80.0
speed_scale = 2.91
autoplay = true

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="EndBattle" to="." method="_on_end_battle_pressed"]
[connection signal="finished" from="VideoStreamPlayer" to="." method="_on_video_stream_player_finished"]
